--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-template"
+name = "example-proc-macro"
 version = "0.0.0-develop"
 authors = ["kflange <zknsftk1msrk@gmail.com>"]
 edition = "2018"
@@ -8,6 +8,3 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1"
-nom = "6"
-thiserror = "1"
