--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hello_macro = { path = "./hello_macro" }
+hello_macro_derive = { path = "./hello_macro/hello_macro_derive" }
